# weather-trip-scout

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: loader.py  settings.py
app/core/: exceptions.py
app/domain/: geo.py  models.py  scoring.py
app/jobs/: morning_report.py
app/providers/: factory.py
app/providers/geo/: base.py  overpass.py
app/providers/maps/: base.py  mapbox.py  staticmap_osm.py
app/providers/weather/: base.py  open_meteo.py  open_weather.py
app/services/: candidate_service.py  forecast_service.py  report_service.py  scoring_service.py  telegram_service.py
deploy/: weather-trip-scout.service  weather-trip-scout.timer
docs/superpowers/plans/: 2026-06-13-weather-trip-scout.md
docs/superpowers/specs/: 2026-06-13-weather-trip-scout-design.md
tests/integration/: test_job_smoke.py
tests/unit/: test_candidate_service.py  test_domain_config.py  test_forecast_service.py  test_main.py  test_morning_report_job.py  test_provider_contracts.py  test_provider_factory.py  test_scoring.py  test_scoring_validation.py  test_telegram_service.py
